--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ section {
 
 /* HEADER */
 header nav {
-  background-color: rgba(248, 247, 246, 0.85);
+  background-color: rgb(245, 245, 245, 0.85);
   display: flex;
   align-items: center;
   padding: 0 8rem;
@@ -58,6 +58,7 @@ header nav {
   list-style-type: none;
 }
 .nav-links li a {
+  font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 3px;
   text-decoration: none;
@@ -143,7 +144,8 @@ header nav {
 /* SERVICES OFFERED SECTION */
 .services-offered-section {
   padding: 6rem 10rem;
-  background-color: rgb(241, 241, 241);
+  height: 80vh;
+  background-color: #f5f5f5;
 }
 .services-offered-section h2 {
   font-size: 1.8rem;
@@ -177,6 +179,7 @@ header nav {
 .services {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-top: 3rem;
 }
 
@@ -193,7 +196,8 @@ header nav {
 }
 .service-card img {
   width: 100%;
-  height: 300px;
+  min-height: 300px;
+  max-height: 450px;
   border-radius: 10px;
   object-fit: cover;
 }
@@ -236,45 +240,99 @@ header nav {
 
 /* CONTACT FORM SECTION */
 .contact-section {
-  background-color: rgb(241, 241, 241);
-  height: 100vh;
-}
-
-.container {
+  background-color: #f5f5f5;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  padding: 6rem 10rem;
 }
 
 .contact-section h2 {
-  font-size: 3.5rem;
-  color: var(--blue-gray);
-  max-width: 33%;
+  font-size: 1.8rem;
+  color: var(--army-green);
+  letter-spacing: 3px;
+  text-transform: uppercase;
   text-align: center;
+  position: relative;
+  width: 40%;
+}
+.contact-section h2::before {
+  content: '';
+  width: 70%;
+  background-color: var(--yellow);
+  height: 3px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(-110%, -50%);
+}
+.contact-section h2::after {
+  content: '';
+  width: 70%;
+  background-color: var(--yellow);
+  height: 3px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(110%, -50%);
+}
+
+.container {
+  /* display: flex;
+  justify-content: space-between;
+  align-items: center; */
+
+  display: grid;
+  grid-template-columns: 1.2fr 2fr;
+  overflow: hidden;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
+  margin-top: 3rem;
+  border-radius: 10px;
+  width: 100%;
+}
+.image-block {
+  display: flex;
+}
+
+.image-block img {
+  max-width: 100%;
 }
 
 .contact-form {
-  width: 50%;
+  width: 80%;
+  margin: 0 auto;
+  padding: 1.5rem;
 }
 
 .contact-form label,
 .contact-form input,
 .contact-form textarea {
   display: block;
-  margin-bottom: 1.2rem;
+  margin-bottom: 1rem;
   width: 100%;
+}
+.contact-form input,
+.contact-form textarea {
+  border-radius: 5px;
+  border: none;
+  border: 1.5px solid var(--orange);
 }
 
 .contact-form input {
-  height: 2rem;
+  height: 1rem;
   padding: 1.2rem 0.6rem;
   font-size: 1.2rem;
+
+  color: var(--blue-gray);
 }
 .contact-form input:focus {
   outline: 1px solid var(--orange-red);
+  color: var(--blue-gray);
 }
 .contact-form textarea:focus {
   outline: 1px solid var(--orange-red);
+  color: var(--blue-gray);
 }
 .contact-form label {
   color: var(--blue-gray);
@@ -286,11 +344,24 @@ header nav {
   padding: 0.6rem;
   font-size: 1.2rem;
   font-family: inherit;
+  color: var(--blue-gray);
+  resize: none;
 }
 
 button {
   background-color: var(--army-green);
-  color: white;
-  padding: 1.2rem 2.4rem;
-  font-size: 1.5rem;
+  color: #f5f5f5;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: all 250ms ease;
+  margin-top: 0.5rem;
+}
+button:hover {
+  color: var(--yellow);
+  background-color: var(--blue-gray);
+  cursor: pointer;
 }
