--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,9 @@ header nav {
   height: 100%;
   object-fit: cover;
 }
+.logo img:hover {
+  cursor: pointer;
+}
 
 /* JUMBOTRON SECTION */
 .jumbotron-section {
@@ -96,8 +99,7 @@ header nav {
 
 /* WELCOME SECTION */
 .welcome-section {
-  padding: 0rem 10rem 2rem;
-  height: 100vh;
+  padding: 6rem 10rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -109,6 +111,7 @@ header nav {
 }
 .avatar-picture img {
   width: 100%;
+  /* max-height: 1170px; */
   border-radius: 50px;
   transform: scale(0.8);
   /* object-fit: cover; */
@@ -144,7 +147,6 @@ header nav {
 /* SERVICES OFFERED SECTION */
 .services-offered-section {
   padding: 6rem 10rem;
-  height: 80vh;
   background-color: #f5f5f5;
 }
 .services-offered-section h2 {
@@ -179,7 +181,6 @@ header nav {
 .services {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   margin-top: 3rem;
 }
 
@@ -196,8 +197,7 @@ header nav {
 }
 .service-card img {
   width: 100%;
-  min-height: 300px;
-  max-height: 450px;
+  height: 350px;
   border-radius: 10px;
   object-fit: cover;
 }
@@ -290,6 +290,7 @@ header nav {
   margin-top: 3rem;
   border-radius: 10px;
   width: 100%;
+  max-width: 1370px;
 }
 .image-block {
   display: flex;
@@ -315,7 +316,8 @@ header nav {
 .contact-form input,
 .contact-form textarea {
   border-radius: 5px;
-  border: none;
+  /* border: none; */
+  /* border-bottom: 1.5px solid var(--orange); */
   border: 1.5px solid var(--orange);
 }
 
@@ -364,4 +366,93 @@ button:hover {
   color: var(--yellow);
   background-color: var(--blue-gray);
   cursor: pointer;
+}
+
+/* FOOTER SECTION */
+footer {
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--blue-gray);
+  padding: 5rem 10rem;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
+}
+.footer-links li {
+  list-style-type: none;
+}
+.footer-links li a {
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-decoration: none;
+  color: var(--yellow);
+  font-weight: 600;
+  transition: color 350ms ease;
+}
+.footer-links li a:hover {
+  color: var(--orange);
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  color: #f5f5f5;
+  width: 50%;
+}
+
+.social-links h3 {
+  color: #f5f5f5;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 2.1rem;
+}
+.social-links i {
+  font-size: 2.7rem;
+  transition: color 200ms ease;
+}
+.social-links i:hover {
+  color: var(--orange);
+  cursor: pointer;
+}
+
+/* MEDIA QUERIES */
+/* My laptop size
+@media only screen and (min-width: 1440) {
+  html {
+    font-size: 17rem;
+  }
+} */
+
+/* Larger monitors */
+@media only screen and (min-width: 1900px) {
+  html {
+    font-size: 19px;
+  }
+  header nav {
+    padding: 0 25rem;
+  }
+  .welcome-section {
+    padding: 0 25rem;
+  }
+  .services-offered-section {
+    padding: 6rem 25rem;
+  }
+  .testimonials-section {
+    padding: 6rem 25rem;
+  }
+  .contact-section {
+    padding: 6rem 25rem;
+  }
+  footer {
+    height: 30vh;
+  }
 }
