--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ footer {
 .social-links h3 {
   color: #f5f5f5;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   font-size: 2.1rem;
 }
 .social-links i {
@@ -422,6 +422,12 @@ footer {
 .social-links i:hover {
   color: var(--orange);
   cursor: pointer;
+}
+.social-links a {
+  color: #f5f5f5;
+}
+.social-links a:visited {
+  color: #f5f5f5;
 }
 
 /* MEDIA QUERIES */
