--- a/styles.css
+++ b/styles.css
@@ -294,10 +294,12 @@ header nav {
 }
 .image-block {
   display: flex;
+  height: 100%;
 }
 
 .image-block img {
   max-width: 100%;
+  object-fit: cover;
 }
 
 .contact-form {
@@ -325,8 +327,14 @@ header nav {
   height: 1rem;
   padding: 1.2rem 0.6rem;
   font-size: 1.2rem;
-
   color: var(--blue-gray);
+  transition: all 300ms ease;
+}
+.contact-form input:hover {
+  outline: 1px solid var(--orange-red);
+}
+.contact-form textarea:hover {
+  outline: 1px solid var(--orange-red);
 }
 .contact-form input:focus {
   outline: 1px solid var(--orange-red);
@@ -348,6 +356,7 @@ header nav {
   font-family: inherit;
   color: var(--blue-gray);
   resize: none;
+  transition: all 300ms ease;
 }
 
 button {
