--- a/css/about.css
+++ b/css/about.css
@@ -1,35 +1,44 @@
 .about-section {
-  padding: 4rem 10rem;
+  padding: 6rem 10rem;
   background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about-title {
-  font-size: 2.7rem;
+  font-size: 2.5rem;
   text-align: center;
   color: var(--blue-gray);
   text-transform: uppercase;
   letter-spacing: 4px;
   position: relative;
+  width: 40%;
 }
 .about-title::before {
   content: '';
   position: absolute;
   background-color: var(--yellow);
   height: 3px;
-  width: 30%;
+  width: 70%;
   left: 0;
   top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(-110%, -50%);
 }
 .about-title::after {
   content: '';
   position: absolute;
   background-color: var(--yellow);
   height: 3px;
-  width: 30%;
+  width: 70%;
   right: 0;
   top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(110%, -50%);
+}
+
+.about-wrapper {
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 .about-container {
@@ -39,8 +48,13 @@
   gap: 3rem;
   margin-top: 6rem;
 }
+#portrait-image img {
+  object-fit: cover;
+  max-height: 400px;
+}
 .about-image {
-  width: 40%;
+  display: flex;
+  width: 45%;
   overflow: hidden;
 }
 .about-image img {
@@ -82,5 +96,16 @@
   }
   .about-container {
     margin-top: 9rem;
+  }
+}
+
+@media only screen and (max-width: 1390px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  html {
+    font-size: 12px;
   }
 }
