--- a/css/process.css
+++ b/css/process.css
@@ -3,32 +3,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6rem 10rem 3rem;
-  background-image: /* linear-gradient(
-      rgba(255, 255, 255, 0.7),
-      rgba(255, 255, 255, 0.7)
-    ),
-    url('/images/jumbotron.jpg'); */
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  padding: 6rem 10rem;
+  background-image: url('/images/bg.jpg');
+  background-position: 50% 30%;
+  height: 140vh;
 }
 
 .process-title {
-  font-size: 2.7rem;
+  font-size: 2.5rem;
   text-align: center;
   color: var(--blue-gray);
   text-transform: uppercase;
   letter-spacing: 4px;
   position: relative;
-  width: 54%;
+  width: 40%;
 }
 .process-title::before {
   content: '';
   position: absolute;
   background-color: var(--yellow);
   height: 3px;
-  width: 65%;
+  width: 70%;
   left: 0;
   top: 50%;
   transform: translate(-110%, -50%);
@@ -38,7 +33,7 @@
   position: absolute;
   background-color: var(--yellow);
   height: 3px;
-  width: 65%;
+  width: 70%;
   right: 0;
   top: 50%;
   transform: translate(110%, -50%);
@@ -53,14 +48,16 @@
 .process-block {
   width: 30%;
   text-align: center;
-  background-color: #dbdbdb;
+  background-color: #f5f5f5;
   border-radius: 10px;
   position: relative;
   z-index: 1;
-  transition: transform ease 300ms;
+  transition: all ease 300ms;
+  opacity: 0.9;
 }
 .process-block:hover {
   transform: scale(1.03);
+  opacity: 1;
 }
 .process-block:hover h3 {
   color: var(--orange);
