--- a/css/about.css
+++ b/css/about.css
@@ -41,6 +41,10 @@
   margin: 0 auto;
 }
 
+.about-container-mobile {
+  display: none;
+}
+
 .about-container {
   display: flex;
   justify-content: center;
@@ -107,5 +111,45 @@
 @media only screen and (max-width: 1100px) {
   html {
     font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  html {
+    font-size: 14px;
+  }
+  .about-section {
+    padding: 4rem 1rem;
+  }
+  .about-wrapper {
+    padding: 0 2rem;
+  }
+  .about-container {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .about-container-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+    margin-top: 6rem;
+    width: 100%;
+  }
+  .about-container-mobile .about-image {
+    box-shadow: 30px 30px 0 var(--army-green);
+  }
+  #container2 {
+    display: none;
+  }
+  .about-textbox {
+    width: 100%;
+  }
+  .about-image {
+    width: 100%;
+  }
+  #portrait-image img {
+    max-height: 300px;
   }
 }
