--- a/css/process.css
+++ b/css/process.css
@@ -181,6 +181,15 @@
     height: 50px;
     font-size: 2rem;
   }
+  .process-title {
+    width: 90%;
+  }
+  .process-title::before {
+    width: 0;
+  }
+  .process-title::after {
+    width: 0;
+  }
 }
 
 @media only screen and (max-width: 380px) {
