--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,29 @@ section {
   padding: 6rem 10rem;
 }
 
+/* MOBILE NAV */
+.mobile-nav {
+  display: none;
+  background-color: rgb(245, 245, 245, 0.85);
+  flex-direction: column;
+  align-items: center;
+  padding: 0 2rem 1rem;
+  z-index: 5;
+}
+.mobile-nav .nav-links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.mobile-nav .logo {
+  width: 35%;
+  height: auto;
+  margin: 1.5rem 0;
+}
+
 /* HEADER */
-header nav {
+.desktop-nav-bar {
   background-color: rgb(245, 245, 245, 0.85);
   display: flex;
   align-items: center;
@@ -49,10 +70,10 @@ header nav {
   z-index: 5;
 }
 
-.nav-links {
+.desktop-nav-bar .nav-links {
   display: flex;
   justify-content: space-around;
-  width: 40%;
+  width: 45%;
 }
 .nav-links li {
   list-style-type: none;
@@ -71,8 +92,9 @@ header nav {
 }
 
 .logo {
-  width: 15%;
-  height: 100%;
+  width: 10%;
+  height: auto;
+  margin: 1.5rem 0;
 }
 .logo img {
   width: 100%;
@@ -85,7 +107,7 @@ header nav {
 
 /* JUMBOTRON SECTION */
 .jumbotron-section {
-  height: 100vh;
+  height: 92vh;
 }
 .jumbotron-section img {
   height: 115vh;
@@ -484,6 +506,15 @@ footer {
 }
 
 @media only screen and (max-width: 580px) {
+  html {
+    font-size: 15px;
+  }
+  .mobile-nav {
+    display: flex;
+  }
+  .desktop-nav-bar {
+    display: none;
+  }
   /* WELCOME SECTION */
   .welcome-section {
     display: flex;
@@ -511,6 +542,15 @@ footer {
     align-items: center;
     padding: 4rem 1rem;
   }
+  .services-offered-section h2 {
+    width: 90%;
+  }
+  .services-offered-section h2::before {
+    width: 0;
+  }
+  .services-offered-section h2::after {
+    width: 0;
+  }
   .services {
     display: flex;
     flex-direction: column;
@@ -528,6 +568,15 @@ footer {
   /* CONTACT SECTION */
   .contact-section {
     padding: 4rem 1rem;
+  }
+  .contact-section h2 {
+    width: 90%;
+  }
+  .contact-section h2::before {
+    width: 0;
+  }
+  .contact-section h2::after {
+    width: 0;
   }
   .container {
     display: grid;
