--- a/css/process.css
+++ b/css/process.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 6rem 10rem;
   background-image: url('/images/bg.jpg');
-  background-position: 50% 30%;
+  background-position: 50% 0;
   background-repeat: no-repeat;
   height: 140vh;
 }
@@ -144,6 +144,12 @@
   }
   .process-section {
     padding: 6rem 25rem;
+  }
+}
+
+@media only screen and (max-height: 800px) {
+  .process-section {
+    background-position: 50% 30%;
   }
 }
 
