--- a/css/about.css
+++ b/css/about.css
@@ -105,21 +105,31 @@
 
 @media only screen and (max-width: 1390px) {
   html {
-    font-size: 14px;
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 1100px) {
   html {
-    font-size: 12px;
+    font-size: 15px;
   }
 }
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 1400px) {
+  .about-section {
+    padding: 4rem;
+  }
+  footer {
+    height: 20vh;
+  }
+}
+
+/* IPAD AND TABLET SIZE */
+@media only screen and (min-width: 0px) and (max-width: 1024px) and (orientation: portrait) {
   html {
-    font-size: 15px;
+    font-size: 14px;
   }
   .about-section {
-    padding: 4rem 1rem;
+    padding: 4rem;
   }
   .about-wrapper {
     padding: 0 2rem;
@@ -151,6 +161,15 @@
   }
   #portrait-image img {
     max-height: 300px;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  html {
+    font-size: 15px;
+  }
+  .about-section {
+    padding: 4rem 1rem;
   }
   .about-title {
     width: 90%;
