--- a/css/faq.css
+++ b/css/faq.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   align-items: center;
   padding: 6rem 15rem;
+  text-align: center;
 }
-
 .faq-title {
   font-size: 2.5rem;
   text-align: center;
@@ -68,6 +68,12 @@
   }
   .faq-container {
     margin-top: 3rem;
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .faq-section {
+    padding: 4rem 2rem;
   }
 }
 
