--- a/css/process.css
+++ b/css/process.css
@@ -153,14 +153,26 @@
   }
 }
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 1400px) {
+  .process-section {
+    padding: 4rem;
+  }
+}
+
+/* IPAD AND TABLET SIZE */
+@media only screen and (min-width: 581px) and (max-width: 1024px) and (orientation: portrait) {
+  footer .social-links h3 {
+    font-size: 1.7rem;
+  }
+}
+
+@media only screen and (max-width: 980px) {
   html {
     font-size: 15px;
   }
   .process-section {
     padding: 4rem 1rem;
     height: 160vh;
-    /* justify-content: flex-start; */
   }
   .process-wrapper {
     display: flex;
