Compressed files & uploaded to Namecheap
Next steps:
- Fix bugs from Marx's notes

--- a/css/process.css
+++ b/css/process.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   padding: 6rem 10rem;
-  background-image: url('/images/bg.jpg');
+  background-image: url('/images/bg-min.jpg');
   background-position: 50% 0;
   background-repeat: no-repeat;
   height: 140vh;
