--- a/css/services.css
+++ b/css/services.css
@@ -94,6 +94,7 @@
 .service-image img {
   max-width: 100%;
   object-fit: cover;
+  display: block;
 }
 .service-description-box {
   padding: 2rem;
