--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,16 @@ section {
   cursor: pointer;
 }
 
+.section-title {
+  font-size: 2.5rem;
+  text-align: center;
+  color: var(--blue-gray);
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  position: relative;
+  /* width: 40%; */
+}
+
 /* MOBILE NAV */
 .mobile-nav {
   display: none;
@@ -71,9 +81,9 @@ section {
 }
 .mobile-nav .nav-links {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
-  gap: 2rem;
+  justify-content: center;
+  gap: 1.5rem;
 }
 .mobile-nav .logo {
   width: 35%;
@@ -553,7 +563,7 @@ footer {
   align-items: center;
   gap: 3rem;
   color: #f5f5f5;
-  width: 50%;
+  width: 70%;
 }
 
 .social-links h3 {
